syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser (NewUserRequest) returns (UserResponse) {}
  rpc Me (UserIdRequest) returns (UserResponse) {}
  rpc GetAllUsers (EmptyRequest) returns (MutlipleUsersResponse) {}
}

message UserIdRequest {
  string id = 1;
}

message NewUserRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string image_url = 4;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string password = 3;
  string email = 4;
  string image_url = 5;
}

message MutlipleUsersResponse {
  repeated UserResponse users = 1;
}

message EmptyRequest {}

